Updated everything but projects. Added some projects

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 		<div class="container">
 			<img class="img-circle imgsus" alt="Alston Lin" src="img/profile.png"/>
 			<h1 class="name-boss">Alston Lin</h1>
-			<h2 class="main-details">Android | Algorithms | Rails</h2>
+			<h2 class="main-details">Android & Web Developer</h2>
 		</div>
 	</header>
 
@@ -86,9 +86,11 @@
 			<span class="cd-words-wrapper waiting">
 				<b class="is-visible">Alston Lin.</b>
 				<b>a Student.</b>
-				<b>a Developer.</b>
-				<b>a Designer.</b>
-				<b>a Software Engineer.</b>
+				<b>an Android Developer.</b>
+				<b>a Javascript Developer.</b>
+				<b>a Rails Developer.</b>
+				<b>a Data Scientist.</b>
+				<b>a Full Stack Developer.</b>
 			</span>
 		</h1>
 	</section>
@@ -100,7 +102,7 @@
 			<div class="row">
 				<div class="col-md-6">
 					<h2 class="title-main">About Me.</h2>
-					<p class="text-main">Hi there! My name is Alston Lin, and welcome to my website! I am currently a student at the University of Waterloo in the Software Engineering class of 2020. I am working on many projects outside of school, including my own start-up, TruTech Innovations. If you would like to know more about myself, see the sections below, and check out my resume!</p>
+					<p class="text-main">Hi there! My name is Alston Lin, and welcome to my website! I am currently a student at the University of Waterloo in the Software Engineering class of 2020. If you would like to know more about myself, see the sections below, and check out my resume!</p>
 				</div>
 				<div class="col-md-6">
 					<img class="img-responsive center-block" src="img/waterloo.png" alt="Waterloo">
@@ -142,6 +144,91 @@
 				</div>
 				<div class="col-md-6 separ">
 					<div class="row">
+						<div class="hidden-xs col-sm-2 icon-skill"><img class="img-skill" alt="python" src="img/python.png"/></div>
+						<div class="col-sm-10">
+							<div class="row">
+								<div class="title-skill">Python</div>
+								<div class="col-sm-12 bar-skill">
+									<div class="this-skill skill-purple skill-eighty"></div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+        <div class="col-md-6 separ">
+					<div class="row">
+						<div class="hidden-xs col-sm-2 icon-skill"><img class="img-skill" alt="c" src="img/c.png"/></div>
+						<div class="col-sm-10">
+							<div class="row">
+								<div class="col-sm-12 title-skill">C and C++</div>
+								<div class="col-sm-12 bar-skill">
+									<div class="this-skill skill-blue skill-seventy"></div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6 separ">
+					<div class="row">
+						<div class="hidden-xs col-sm-2 icon-skill"><img class="img-skill" alt="js" src="img/js.png"/></div>
+						<div class="col-sm-10">
+							<div class="row">
+								<div class="col-sm-12 title-skill">JavaScript</div>
+								<div class="col-sm-12 bar-skill">
+									<div class="this-skill skill-green skill-ninety"></div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="hidden-xs col-sm-2 icon-skill"><img class="img-skill" alt="java" src="img/node.png"/></div>
+							<div class="col-sm-10">
+								<div class="row">
+									<div class="col-sm-12 title-framework">Node.js and Express.js</div>
+									<div class="col-sm-12 bar-skill">
+										<div class="this-skill skill-green skill-eighty"></div>
+									</div>
+								</div>
+							</div>
+					</div>
+					<div class="row">
+						<div class="hidden-xs col-sm-2 icon-skill"><img class="img-skill" alt="java" src="img/react.png"/></div>
+							<div class="col-sm-10">
+								<div class="row">
+									<div class="col-sm-12 title-framework">React.js</div>
+									<div class="col-sm-12 bar-skill">
+										<div class="this-skill skill-green skill-fifty"></div>
+									</div>
+								</div>
+							</div>
+					</div>
+					<div class="row">
+						<div class="hidden-xs col-sm-2 icon-skill"><img class="img-skill" alt="java" src="img/mongo.png"/></div>
+							<div class="col-sm-10">
+								<div class="row">
+									<div class="col-sm-12 title-framework">MongoDB</div>
+									<div class="col-sm-12 bar-skill">
+										<div class="this-skill skill-green skill-thirty"></div>
+									</div>
+								</div>
+							</div>
+					</div>
+					<div class="row">
+						<div class="hidden-xs col-sm-2 icon-skill"><img class="img-skill" alt="java" src="img/meteor.png"/></div>
+							<div class="col-sm-10">
+								<div class="row">
+									<div class="col-sm-12 title-framework">Meteor.js</div>
+									<div class="col-sm-12 bar-skill">
+										<div class="this-skill skill-green skill-twenty"></div>
+									</div>
+								</div>
+							</div>
+					</div>
+				</div>
+
+				<div class="col-md-6 separ">
+					<div class="row">
 						<div class="col-sm-2 hidden-xs icon-skill"><img class="img-skill" alt="ruby" src="img/ruby.png"/></div>
 						<div class="col-sm-10">
 							<div class="row">
@@ -158,7 +245,7 @@
 								<div class="row">
 									<div class="col-sm-12 title-framework">Rails</div>
 									<div class="col-sm-12 bar-skill">
-										<div class="this-skill skill-red skill-eighty"></div>
+										<div class="this-skill skill-red skill-sixty"></div>
 									</div>
 								</div>
 							</div>
@@ -191,67 +278,29 @@
 
 				<div class="col-md-6 separ">
 					<div class="row">
-						<div class="hidden-xs col-sm-2 icon-skill"><img class="img-skill" alt="js" src="img/js.png"/></div>
+						<div class="hidden-xs col-sm-2 icon-skill"><img class="img-skill" alt="python" src="img/csharp.png"/></div>
 						<div class="col-sm-10">
 							<div class="row">
-								<div class="col-sm-12 title-skill">JavaScript</div>
+								<div class="title-skill">C Sharp</div>
 								<div class="col-sm-12 bar-skill">
-									<div class="this-skill skill-green skill-seventy"></div>
+									<div class="this-skill skill-yellow skill-thirty"></div>
 								</div>
 							</div>
 						</div>
 					</div>
 					<div class="row">
-						<div class="hidden-xs col-sm-2 icon-skill"><img class="img-skill" alt="java" src="img/meteor.png"/></div>
-							<div class="col-sm-10">
-								<div class="row">
-									<div class="col-sm-12 title-framework">Meteor.js</div>
-									<div class="col-sm-12 bar-skill">
-										<div class="this-skill skill-green skill-thirty"></div>
-									</div>
-								</div>
-							</div>
-					</div>
-					<div class="row">
-						<div class="hidden-xs col-sm-2 icon-skill"><img class="img-skill" alt="java" src="img/node.png"/></div>
-							<div class="col-sm-10">
-								<div class="row">
-									<div class="col-sm-12 title-framework">Node.js</div>
-									<div class="col-sm-12 bar-skill">
-										<div class="this-skill skill-green skill-thirty"></div>
-									</div>
-								</div>
-							</div>
-					</div>
-				</div>
-
-				<div class="col-md-6 separ">
-					<div class="row">
-						<div class="hidden-xs col-sm-2 icon-skill"><img class="img-skill" alt="python" src="img/python.png"/></div>
+						<div class="hidden-xs col-sm-2 icon-skill"><img class="img-skill" alt="python" src="img/unity.png"/></div>
 						<div class="col-sm-10">
 							<div class="row">
-								<div class="title-skill">Python</div>
+								<div class="title-skill">Unity</div>
 								<div class="col-sm-12 bar-skill">
-									<div class="this-skill skill-purple skill-eighty"></div>
+									<div class="this-skill skill-yellow skill-fourty"></div>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-
-				<div class="col-md-6 separ">
-					<div class="row">
-						<div class="hidden-xs col-sm-2 icon-skill"><img class="img-skill" alt="c" src="img/c.png"/></div>
-						<div class="col-sm-10">
-							<div class="row">
-								<div class="col-sm-12 title-skill">C and C++</div>
-								<div class="col-sm-12 bar-skill">
-									<div class="this-skill skill-blue skill-seventy"></div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
+				
 			</div>
 			<br><br><br>
 			<p id="other-skills" class="mywhite text-center">Other Skills: Git, Bash, Vim, Material Design Principles<BR>Fluent in English, French, and Mandarin</p>
@@ -340,6 +389,92 @@
 						</div>
 					</div>
         </li>
+
+				<li id="space" class='col-md-6'>
+					<div class="panel">
+						<div class="panel-heading">
+							<h4 class="project-title">Space InVRaders</h4>
+							<a href="https://github.com/AlstonLin/Space-InVRaders">
+								<input type="image" alt="Github Link" src="img/github_logo.png" class="btn btn-default project-icon"></input>
+							</a>
+							<a href="http://devpost.com/software/space-invrders">
+								<input type="image" alt="Devpost Link" src="img/devpost.svg" class="btn btn-default project-icon"></input>
+							</a>
+							<h5 class="project-description">An first person multiplayer space shooter in Virtual Reality using Google Cardboard</h5>
+							<h5 class="contribution"><i>Managed the interaction between the client and server side of the app, and input handling from the user</i></h5>
+						</div>
+						<div class="panel-body">
+							<div class="owl-carousel-landscape">
+								<div class="item">
+									<a href="img/space1.jpg" class="fancybox-thumbs" data-fancybox-group="space">
+										<img class="gallery" src="img/space1.jpg" alt="space"/>
+									</a>
+								</div>
+								<div class="item">
+									<a href="img/space2.jpg" class="fancybox-thumbs" data-fancybox-group="space">
+										<img class="gallery" src="img/space2.jpg" alt="space"/>
+									</a>
+								</div>
+							</div>
+							<div id="space-tags-languages" class="tags">
+							</div>
+							<div id="space-tags-fields" class="tags">
+							</div>
+						</div>
+					</div>
+				</li>
+				
+        <li id="nutritrack" class='col-md-6'>
+					<div class="panel">
+						<div class="panel-heading">
+							<h4 class="project-title">Nutritrack</h4>
+							<a href="https://github.com/AlstonLin/NutriTrack-Node">
+								<input type="image" alt="Github Link" src="img/github_logo.png" class="btn btn-default project-icon"></input>
+							</a>
+							<a href="https://github.com/AlstonLin/NutriTrack">
+								<input type="image" alt="Github Link" src="img/github_logo.png" class="btn btn-default project-icon"></input>
+							</a>
+							<a href="http://devpost.com/software/nutritrack">
+								<input type="image" alt="Devpost Link" src="img/devpost.svg" class="btn btn-default project-icon"></input>
+							</a>
+							<h5 class="project-description">An Android app where people can take pictures of what they eat to keep track of their nutritional intake</h5>
+							<h5 class="contribution"><i>Created by myself</i></h5>
+						</div>
+						<div class="panel-body">
+							<div class="owl-carousel-landscape">
+								<div class="item">
+									<a href="img/nutritrack1.png" class="fancybox-thumbs" data-fancybox-group="nutritrack">
+										<img class="gallery" src="img/nutritrack1.jpg" alt="nutritrack1"/>
+									</a>
+								</div>
+								<div class="item">
+									<a href="img/nutritrack2.png" class="fancybox-thumbs" data-fancybox-group="nutritrack">
+										<img class="gallery" src="img/nutritrack2.jpg" alt="nutritrack2"/>
+									</a>
+								</div>
+								<div class="item">
+									<a href="img/nutritrack3.png" class="fancybox-thumbs" data-fancybox-group="nutritrack">
+										<img class="gallery" src="img/nutritrack3.jpg" alt="nutritrack3"/>
+									</a>
+								</div>
+								<div class="item">
+									<a href="img/nutritrack4.png" class="fancybox-thumbs" data-fancybox-group="nutritrack">
+										<img class="gallery" src="img/nutritrack4.jpg" alt="nutritrack4"/>
+									</a>
+								</div>
+								<div class="item">
+									<a href="img/nutritrack5.jpg" class="fancybox-thumbs" data-fancybox-group="nutritrack">
+										<img class="gallery" src="img/nutritrack5.jpg" alt="nutritrack5"/>
+									</a>
+								</div>
+							</div>
+							<div id="block-survival-tags-languages" class="tags">
+							</div>
+							<div id="block-survival-tags-fields" class="tags">
+							</div>
+						</div>
+					</div>
+				</li>
 
 				<li id="muriqui" class='col-md-6'>
 					<div class="panel">
@@ -640,7 +775,6 @@
 						</div>
 					</div>
 				</li>
-
 				<li id="lost" class='col-md-6'>
 					<div class="panel">
 						<div class="panel-heading">
@@ -733,39 +867,44 @@
 
 		<!-- Timeline Responsive -->
 		<article id="cd-timeline" class="cd-container">
-			<!-- 1 Item -->
+			<!-- Encircle -->
 			<div class="cd-timeline-block">
-				<!-- Circle image 64x64 -->
+				<div class="cd-timeline-img my-red">
+					<img src="img/ed2.png" alt="Science">
+				</div>
+				<div class="cd-timeline-content">
+					<h2>Software Developer</h2>
+					<h3>ENCIRCLE</h3>
+					<span class="cd-date">May 2016 - August 2016</span>
+				</div>
+			</div>
+			<!-- University -->
+			<div class="cd-timeline-block">
 				<div class="cd-timeline-img my-red">
 					<img src="img/ed1.png" alt="Engineering">
 				</div>
-				<!-- Info 1 Education -->
 				<div class="cd-timeline-content">
 					<h2>Candidate for Bachelors of Software Engineering</h2>
 					<h3>UNIVERSITY OF WATERLOO</h3>
 					<span class="cd-date">September 2015 - Present</span>
 				</div>
 			</div>
-			<!-- 2 Item -->
+			<!-- TruTech -->
 			<div class="cd-timeline-block">
-				<!-- Circle image 64x64 -->
 				<div class="cd-timeline-img my-red">
 					<img src="img/ed2.png" alt="Science">
 				</div>
-				<!-- Info 2 Education -->
 				<div class="cd-timeline-content">
-					<h2>CEO, Founder, and Head Developer</h2>
-					<h3>TRUTECH INNOVATIONS INC.</h3>
+					<h2>Founder and Head Developer</h2>
+					<h3>TRUTECH INNOVATIONS</h3>
 					<span class="cd-date">May 2014 - Present</span>
 				</div>
 			</div>
-			<!-- 3 Item -->
+			<!-- High School -->
 			<div class="cd-timeline-block">
-				<!-- Circle image 64x64 -->
 				<div class="cd-timeline-img my-red">
 					<img src="img/ed3.png" alt="Bachelor">
 				</div>
-				<!-- Info 3 Education -->
 				<div class="cd-timeline-content">
 					<h2>High School</h2>
 					<h3>PIERRE ELLIOT TRUDEAU HIGH SCHOOL</h3>
@@ -790,9 +929,6 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 btn-class">
-					<a href="http://www.trutechinnovations.com" class="social-ink">
-						<img class="socl" src="img/trutech.png" alt="trutech"/>
-					</a>
 					<a href="http://github.com/AlstonLin" class="social-ink">
 						<img class="socl" src="img/github.png" alt="github"/>
 					</a>
