Removed about me and the autotype

--- a/index.html
+++ b/index.html
@@ -57,8 +57,6 @@
 			        </a>
 			        <!-- Navigation Sections -->
 			        <ul class="dropdown-menu">
-						<li><a data-scroll data-options='{ "easing": "easeOutQuint" }' href="#top" class="menu-item menu-text">Hello</a></li>
-						<li><a data-scroll data-options='{ "easing": "easeOutQuint" }' href="#about" class="menu-item menu-text">About Me</a></li>
 						<li><a data-scroll data-options='{ "easing": "easeOutQuint" }' href="#skills" class="menu-item menu-text">Languages and Frameworks</a></li>
 						<li><a data-scroll data-options='{ "easing": "easeOutQuint" }' href="#portfolio" class="menu-item menu-text">Portfolio</a></li>
 						<li><a data-scroll data-options='{ "easing": "easeOutQuint" }' href="#timeline" class="menu-item menu-text">Timeline</a></li>
@@ -90,12 +88,10 @@
       </div>
 		</div>
 	</header>
-
-	<section id="about" class="cd-intro">
+<!-- 
+	<section id="aboutme" class="cd-intro">
 		<h1 class="cd-headline letters type">
-			<!-- Static Text -->
 			<span>Hello World. I am </span>
-			<!-- Automatic Text Type -->
 			<span class="cd-words-wrapper waiting">
 				<b class="is-visible">Alston Lin.</b>
 				<b>a Student.</b>
@@ -107,9 +103,6 @@
 			</span>
 		</h1>
 	</section>
-	<!-- // About Me Intro -->
-
-	<!-- About Me -->
 	<section id="aboutme" class="full-section ha-waypoint" data-animate-down="ha-header-subshow" data-animate-up="ha-header-show">
 		<article class="container">
 			<div class="row">
@@ -123,7 +116,7 @@
 			</div>
 		</article>
 	</section>
-
+  -->
 	<!-- Skills -->
 	<section id="skills" class="full-section-two bg-skills">
 		<div class="container">
