Small fix with button floating

--- a/index.html
+++ b/index.html
@@ -402,11 +402,11 @@
 					<div class="panel">
 						<div class="panel-heading">
 							<h4 class="project-title">Castle Runner VR</h4>
-							<a href="https://play.google.com/store/apps/details?id=io.alstonlin.castle_runner">
-								<img alt="Get it on Google Play" src="https://play.google.com/intl/en_us/badges/images/generic/en-play-badge.png" height="40"/></a>
 							<a href="https://github.com/danyalraza/VR-Infinite-Runner">
 								<input type="image" alt="Github Link" src="img/github_logo.png" class="btn btn-default project-icon"></input>
 							</a>
+							<a href="https://play.google.com/store/apps/details?id=io.alstonlin.castle_runner">
+								<img alt="Get it on Google Play" src="https://play.google.com/intl/en_us/badges/images/generic/en-play-badge.png" height="40" class="pull-right"/></a>
 							<h5 class="project-description">An Infinite Runner game where players dodge lava and collect fuel with their jetpack in Virtual Reality</h5>
               <h5 class="contribution"><i>Handled user inputs, game physics, and part of the terrain generation</i></h5>
 						</div>
