Added most of the projects

--- a/index.html
+++ b/index.html
@@ -535,6 +535,45 @@
 					</div>
 				</li>
         
+        <li id="space" class='col-md-6'>
+					<div class="panel">
+						<div class="panel-heading">
+							<h4 class="project-title">Space InVRaders</h4>
+							<a href="https://github.com/AlstonLin/Space-InVRaders">
+								<input type="image" alt="Github Link" src="img/github_logo.png" class="btn btn-default project-icon"></input>
+							</a>
+							<a href="https://github.com/utk9/PennAppsXIV-Node">
+								<input type="image" alt="Github Link" src="img/github_logo.png" class="btn btn-default project-icon"></input>
+							</a>
+							<a href="http://devpost.com/software/space-invrders">
+								<input type="image" alt="Devpost Link" src="img/devpost.svg" class="btn btn-default project-icon"></input>
+							</a>
+							<h5 class="project-description">A multiplayer first person space shooter in Virtual Reality</h5>
+							<h5 class="contribution"><i>Implemented the player controls, part of the HUD, and networking</i></h5>
+						</div>
+						<div class="panel-body">
+							<div class="owl-carousel-landscape">
+								<div class="item">
+									<a href="img/space1.jpg" class="fancybox-thumbs" data-fancybox-group="space">
+										<img class="gallery" src="img/space1.jpg" alt="space1"/>
+									</a>
+								</div>
+								<div class="item">
+									<a href="img/space2.jpg" class="fancybox-thumbs" data-fancybox-group="space">
+										<img class="gallery" src="img/space2.jpg" alt="space2"/>
+									</a>
+								</div>
+							</div>
+              <div class="tags-container">
+                <div id="space-tags-languages" class="tags">
+                </div>
+                <div id="space-tags-fields" class="tags">
+                </div>
+              </div>
+						</div>
+					</div>
+				</li>
+        
         <li id="beatmix" class='col-md-6'>
 					<div class="panel">
 						<div class="panel-heading">
@@ -584,6 +623,41 @@
 					</div>
 				</li>
 
+        <li id="ihear" class='col-md-6'>
+					<div class="panel">
+						<div class="panel-heading">
+							<h4 class="project-title">iHear</h4>
+							<a href="https://github.com/AlstonLin/iHear">
+								<input type="image" alt="Github Link" src="img/github_logo.png" class="btn btn-default project-icon"></input>
+							</a>
+							<a href="http://devpost.com/software/ihear">
+								<input type="image" alt="Devpost Link" src="img/devpost.svg" class="btn btn-default project-icon"></input>
+							</a>
+							<h5 class="project-description">An AR platform that provides sound localization along with an intuitive and easy-to-use Sign-Language to Speech service.</h5>
+							<h5 class="contribution"><i>Built the sign language to speech feature, including the design of the Neural Network used for it</i></h5>
+						</div>
+						<div class="panel-body">
+							<div class="owl-carousel-landscape">
+								<div class="item">
+									<a href="img/ihear1.png" class="fancybox-thumbs" data-fancybox-group="ihear">
+										<img class="gallery" src="img/ihear1.png" alt="ihear1"/>
+									</a>
+								</div>
+								<div class="item">
+									<a href="img/ihear2.jpg" class="fancybox-thumbs" data-fancybox-group="ihear">
+										<img class="gallery" src="img/ihear2.jpg" alt="ihear2"/>
+									</a>
+								</div>
+							</div>
+              <div class="tags-container">
+                <div id="ihear-tags-languages" class="tags">
+                </div>
+                <div id="ihear-tags-fields" class="tags">
+                </div>
+              </div>
+						</div>
+					</div>
+				</li>
         <li id="quickvid" class='col-md-6'>
 					<div class="panel">
 						<div class="panel-heading">
