Added pictures for learningLock

--- a/index.html
+++ b/index.html
@@ -491,10 +491,13 @@
 					<div class="panel">
 						<div class="panel-heading">
 							<h4 class="project-title">Muriqui</h4>
+							<a href="http://muriqui.xyz">
+								<button class="btn btn-success project-icon">Website</button>
+							</a>
 							<a href="https://github.com/AlstonLin/Muriqui">
 								<input type="image" alt="Github Link" src="img/github_logo.png" class="btn btn-default project-icon"></input>
 							</a>
-              <h5 class="project-description"><i>This project has been removed from production to conform with university policies</i><br/><br/>A web app that allows students to share their test cases for assignments, and have the unit testing source code automatically generated for them.</h5>
+              <h5 class="project-description">A web app that allows students to share their test cases for assignments, and have the unit testing source code automatically generated for them.</h5>
 							<h5 class="contribution"><i>Created everything, except for some of the design</i></h5>
 						</div>
 						<div class="panel-body">
