--- a/index.html
+++ b/index.html
@@ -446,7 +446,56 @@
 					</div>
         </li>
 
-				<li id="castle" class='col-md-6'>
+				<li id="learning" class='col-md-6'>
+					<div class="panel">
+						<div class="panel-heading">
+							<h4 class="project-title">Learning Lock</h4>
+							<a href="https://github.com/AlstonLin/TheLearningLock">
+								<input type="image" alt="Github Link" src="img/github_logo.png" class="btn btn-default project-icon"></input>
+							</a>
+							<h5 class="project-description">A lock screen that learns how you unlock your phone so that it can help detect
+              and lock out imposters</h5>
+              <h5 class="contribution"><i>Created by myself, except for some design</i></h5>
+						</div>
+						<div class="panel-body">
+							<div class="owl-carousel-landscape">
+								<div class="item">
+									<a href="img/learning1.png" class="fancybox-thumbs" data-fancybox-group="learning">
+										<img class="gallery" src="img/learning1.png" alt="learning1"/>
+									</a>
+								</div>
+								<div class="item">
+									<a href="img/learning2.png" class="fancybox-thumbs" data-fancybox-group="learning">
+										<img class="gallery" src="img/learning2.png" alt="learning2"/>
+									</a>
+								</div>
+								<div class="item">
+									<a href="img/learning3.png" class="fancybox-thumbs" data-fancybox-group="learning">
+										<img class="gallery" src="img/learning3.png" alt="learning3"/>
+									</a>
+								</div>
+								<div class="item">
+									<a href="img/learning4.png" class="fancybox-thumbs" data-fancybox-group="learning">
+										<img class="gallery" src="img/learning4.png" alt="learning4"/>
+									</a>
+								</div>
+								<div class="item">
+									<a href="img/learning5.png" class="fancybox-thumbs" data-fancybox-group="learning">
+										<img class="gallery" src="img/learning5.png" alt="learning5"/>
+									</a>
+								</div>
+							</div>
+              <div class="tags-container">
+                <div id="learning-tags-languages" class="tags">
+                </div>
+                <div id="learning-tags-fields" class="tags">
+                </div>
+              </div>
+						</div>
+					</div>
+				</li>
+				
+        <li id="castle" class='col-md-6'>
 					<div class="panel">
 						<div class="panel-heading">
 							<h4 class="project-title">Castle Runner VR</h4>
