--- a/index.html
+++ b/index.html
@@ -453,6 +453,8 @@
 							<a href="https://github.com/AlstonLin/TheLearningLock">
 								<input type="image" alt="Github Link" src="img/github_logo.png" class="btn btn-default project-icon"></input>
 							</a>
+							<a href="https://play.google.com/store/apps/details?id=io.alstonlin.thelearninglock">
+								<img alt="Get it on Google Play" src="https://play.google.com/intl/en_us/badges/images/generic/en-play-badge.png" height="40" class="pull-right"/></a>
 							<h5 class="project-description">A lock screen that learns how you unlock your phone so that it can help detect
               and lock out imposters</h5>
               <h5 class="contribution"><i>Created by myself, except for some design</i></h5>
