Fixed Cliq link

--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
 					<div class="panel">
 						<div class="panel-heading">
 							<h4 class="project-title">Cliq</h4>
-							<a href="http://cliq.fm">
+							<a href="http://www.cliq.fm">
 								<button class="btn btn-success project-icon">Website</button>
 							</a>
 							<h5 class="project-description">A social media web app where musicians can connect with their fans and share exclusive content to those that join their Cliq</h5>
