Minor update of skills and experience

--- a/index.html
+++ b/index.html
@@ -88,35 +88,6 @@
       </div>
 		</div>
 	</header>
-<!-- 
-	<section id="aboutme" class="cd-intro">
-		<h1 class="cd-headline letters type">
-			<span>Hello World. I am </span>
-			<span class="cd-words-wrapper waiting">
-				<b class="is-visible">Alston Lin.</b>
-				<b>a Student.</b>
-				<b>an Android Developer.</b>
-				<b>a Javascript Developer.</b>
-				<b>a Rails Developer.</b>
-				<b>a Data Scientist.</b>
-				<b>a Full Stack Developer.</b>
-			</span>
-		</h1>
-	</section>
-	<section id="aboutme" class="full-section ha-waypoint" data-animate-down="ha-header-subshow" data-animate-up="ha-header-show">
-		<article class="container">
-			<div class="row">
-				<div class="col-md-6">
-					<h2 class="title-main">About Me.</h2>
-					<p class="text-main">Hi there! My name is Alston Lin, and welcome to my website! I am currently a student at the University of Waterloo in the Software Engineering class of 2020. If you would like to know more about myself, see the sections below, and check out my resume!</p>
-				</div>
-				<div class="col-md-6">
-					<img class="img-responsive center-block" src="img/waterloo.png" alt="Waterloo">
-				</div>
-			</div>
-		</article>
-	</section>
-  -->
 	<!-- Skills -->
 	<section id="skills" class="full-section-two bg-skills">
 		<div class="container">
@@ -147,22 +118,19 @@
 								</div>
 							</div>
 					</div>
-				</div>
-				<div class="col-md-6 separ">
+          <br/><br/>
 					<div class="row">
 						<div class="hidden-xs col-sm-2 icon-skill"><img class="img-skill" alt="python" src="img/python.png"/></div>
 						<div class="col-sm-10">
 							<div class="row">
 								<div class="title-skill">Python</div>
 								<div class="col-sm-12 bar-skill">
-									<div class="this-skill skill-purple skill-eighty"></div>
+									<div class="this-skill skill-purple skill-seventy"></div>
 								</div>
 							</div>
 						</div>
 					</div>
-				</div>
-
-        <div class="col-md-6 separ">
+          <br/><br/>
 					<div class="row">
 						<div class="hidden-xs col-sm-2 icon-skill"><img class="img-skill" alt="c" src="img/c.png"/></div>
 						<div class="col-sm-10">
@@ -174,66 +142,7 @@
 							</div>
 						</div>
 					</div>
-				</div>
-				<div class="col-md-6 separ">
-					<div class="row">
-						<div class="hidden-xs col-sm-2 icon-skill"><img class="img-skill" alt="js" src="img/js.png"/></div>
-						<div class="col-sm-10">
-							<div class="row">
-								<div class="col-sm-12 title-skill">JavaScript</div>
-								<div class="col-sm-12 bar-skill">
-									<div class="this-skill skill-green skill-ninety"></div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="row">
-						<div class="hidden-xs col-sm-2 icon-skill"><img class="img-skill" alt="java" src="img/node.png"/></div>
-							<div class="col-sm-10">
-								<div class="row">
-									<div class="col-sm-12 title-framework">Node.js and Express.js</div>
-									<div class="col-sm-12 bar-skill">
-										<div class="this-skill skill-green skill-eighty"></div>
-									</div>
-								</div>
-							</div>
-					</div>
-					<div class="row">
-						<div class="hidden-xs col-sm-2 icon-skill"><img class="img-skill" alt="java" src="img/react.png"/></div>
-							<div class="col-sm-10">
-								<div class="row">
-									<div class="col-sm-12 title-framework">React.js</div>
-									<div class="col-sm-12 bar-skill">
-										<div class="this-skill skill-green skill-fifty"></div>
-									</div>
-								</div>
-							</div>
-					</div>
-					<div class="row">
-						<div class="hidden-xs col-sm-2 icon-skill"><img class="img-skill" alt="java" src="img/mongo.png"/></div>
-							<div class="col-sm-10">
-								<div class="row">
-									<div class="col-sm-12 title-framework">MongoDB</div>
-									<div class="col-sm-12 bar-skill">
-										<div class="this-skill skill-green skill-thirty"></div>
-									</div>
-								</div>
-							</div>
-					</div>
-					<div class="row">
-						<div class="hidden-xs col-sm-2 icon-skill"><img class="img-skill" alt="java" src="img/meteor.png"/></div>
-							<div class="col-sm-10">
-								<div class="row">
-									<div class="col-sm-12 title-framework">Meteor.js</div>
-									<div class="col-sm-12 bar-skill">
-										<div class="this-skill skill-green skill-twenty"></div>
-									</div>
-								</div>
-							</div>
-					</div>
-				</div>
-
-				<div class="col-md-6 separ">
+          <br/><br/>
 					<div class="row">
 						<div class="col-sm-2 hidden-xs icon-skill"><img class="img-skill" alt="ruby" src="img/ruby.png"/></div>
 						<div class="col-sm-10">
@@ -256,8 +165,7 @@
 								</div>
 							</div>
 					</div>
-				</div>
-				<div class="col-md-6 separ">
+          <br/><br/>
 					<div class="row">
 						<div class="hidden-xs col-sm-2 icon-skill"><img class="img-skill" alt="html" src="img/html.png"/></div>
 						<div class="col-sm-10">
@@ -281,8 +189,63 @@
 							</div>
 					</div>
 				</div>
-
 				<div class="col-md-6 separ">
+					<div class="row">
+						<div class="hidden-xs col-sm-2 icon-skill"><img class="img-skill" alt="js" src="img/js.png"/></div>
+						<div class="col-sm-10">
+							<div class="row">
+								<div class="col-sm-12 title-skill">JavaScript</div>
+								<div class="col-sm-12 bar-skill">
+									<div class="this-skill skill-green skill-hundred"></div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="hidden-xs col-sm-2 icon-skill"><img class="img-skill" alt="java" src="img/node.png"/></div>
+							<div class="col-sm-10">
+								<div class="row">
+									<div class="col-sm-12 title-framework">Node.js and Express.js</div>
+									<div class="col-sm-12 bar-skill">
+										<div class="this-skill skill-green skill-ninety"></div>
+									</div>
+								</div>
+							</div>
+					</div>
+					<div class="row">
+						<div class="hidden-xs col-sm-2 icon-skill"><img class="img-skill" alt="java" src="img/react.png"/></div>
+							<div class="col-sm-10">
+								<div class="row">
+									<div class="col-sm-12 title-framework">React.js</div>
+									<div class="col-sm-12 bar-skill">
+										<div class="this-skill skill-green skill-seventy"></div>
+									</div>
+								</div>
+							</div>
+					</div>
+					<div class="row">
+						<div class="hidden-xs col-sm-2 icon-skill"><img class="img-skill" alt="java" src="img/mongo.png"/></div>
+							<div class="col-sm-10">
+								<div class="row">
+									<div class="col-sm-12 title-framework">MongoDB</div>
+									<div class="col-sm-12 bar-skill">
+										<div class="this-skill skill-green skill-thirty"></div>
+									</div>
+								</div>
+							</div>
+					</div>
+					<div class="row">
+						<div class="hidden-xs col-sm-2 icon-skill"><img class="img-skill" alt="java" src="img/meteor.png"/></div>
+							<div class="col-sm-10">
+								<div class="row">
+									<div class="col-sm-12 title-framework">Meteor.js</div>
+									<div class="col-sm-12 bar-skill">
+										<div class="this-skill skill-green skill-ten"></div>
+									</div>
+								</div>
+							</div>
+					</div>
+          <br/><br/>
 					<div class="row">
 						<div class="hidden-xs col-sm-2 icon-skill"><img class="img-skill" alt="python" src="img/csharp.png"/></div>
 						<div class="col-sm-10">
@@ -301,6 +264,18 @@
 								<div class="title-skill">Unity</div>
 								<div class="col-sm-12 bar-skill">
 									<div class="this-skill skill-yellow skill-fourty"></div>
+								</div>
+							</div>
+						</div>
+					</div>
+          <br/><br/>
+					<div class="row">
+						<div class="hidden-xs col-sm-2 icon-skill"><img class="img-skill" alt="go" src="img/go.png"/></div>
+						<div class="col-sm-10">
+							<div class="row">
+								<div class="title-skill">Go</div>
+								<div class="col-sm-12 bar-skill">
+									<div class="this-skill skill-orange skill-twenty"></div>
 								</div>
 							</div>
 						</div>
@@ -1169,6 +1144,17 @@
 
 		<!-- Timeline Responsive -->
 		<article id="cd-timeline" class="cd-container">
+			<!-- IBM -->
+			<div class="cd-timeline-block">
+				<div class="cd-timeline-img my-red">
+					<img src="img/ed2.png" alt="Science">
+				</div>
+				<div class="cd-timeline-content">
+					<h2>Javascript Developer</h2>
+					<h3>IBM</h3>
+					<span class="cd-date">January 2017 - April 2017</span>
+				</div>
+			</div>
 			<!-- Encircle -->
 			<div class="cd-timeline-block">
 				<div class="cd-timeline-img my-red">
