--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 		<!-- //Navigation -->
 
 		<div class="container">
-			<img class="img-circle imgsus" alt="Alston Lin" src="img/profile.png"/>
+			<img class="img-circle imgsus" alt="Alston Lin" src="img/profile.jpg"/>
 			<h1 class="name-boss">Alston Lin</h1>
 			<h2 class="main-details">Android & Web Developer</h2>
       <br/><br/>
@@ -306,55 +306,6 @@
 				</button>
 			</div>
 			<ul class="row portfolio">
-				<li id="cliq" class='col-md-6'>
-					<div class="panel">
-						<div class="panel-heading">
-							<h4 class="project-title">Cliq</h4>
-							<a href="http://www.cliq.fm">
-								<button class="btn btn-success project-icon">Website</button>
-							</a>
-							<h5 class="project-description">A social media web app where musicians can connect with their fans and share exclusive content to those that join their Cliq</h5>
-              <h5 class="contribution"><i>Created by myself, except for design</i></h5>
-						</div>
-						<div class="panel-body">
-							<div class="owl-carousel-landscape">
-								<div class="item">
-									<a href="img/cliq1.png" class="fancybox-thumbs" data-fancybox-group="cliq">
-										<img class="gallery" src="img/cliq1.png" alt="cliq1"/>
-									</a>
-								</div>
-								<div class="item">
-									<a href="img/cliq2.png" class="fancybox-thumbs" data-fancybox-group="cliq">
-										<img class="gallery" src="img/cliq2.png" alt="cliq2"/>
-									</a>
-								</div>
-								<div class="item">
-									<a href="img/cliq3.png" class="fancybox-thumbs" data-fancybox-group="cliq">
-										<img class="gallery" src="img/cliq3.png" alt="cliq3"/>
-									</a>
-								</div>
-								<div class="item">
-									<a href="img/cliq4.png" class="fancybox-thumbs" data-fancybox-group="cliq">
-										<img class="gallery" src="img/cliq4.png" alt="cliq4"/>
-									</a>
-								</div>
-								<div class="item">
-									<a href="img/cliq5.png" class="fancybox-thumbs" data-fancybox-group="cliq">
-										<img class="gallery" src="img/cliq5.png" alt="cliq5"/>
-									</a>
-								</div>
-							</div>
-              <div class="tags-container">
-                <div id="cliq-tags-languages" class="tags">
-                </div>
-                <div id="cliq-tags-fields" class="tags">
-                </div>
-              </div>
-						</div>
-					</div>
-				</li>
-
-
         <li id="calculall" class='col-md-6'>
 					<div class="panel">
 						<div class="panel-heading">
@@ -472,6 +423,52 @@
 					</div>
 				</li>
 				
+				<li id="cliq" class='col-md-6'>
+					<div class="panel">
+						<div class="panel-heading">
+							<h4 class="project-title">Cliq</h4>
+							<h5 class="project-description">A social media web app where musicians can connect with their fans and share exclusive content to those that join their Cliq</h5>
+              <h5 class="contribution"><i>Created by myself, except for design</i></h5>
+						</div>
+						<div class="panel-body">
+							<div class="owl-carousel-landscape">
+								<div class="item">
+									<a href="img/cliq1.png" class="fancybox-thumbs" data-fancybox-group="cliq">
+										<img class="gallery" src="img/cliq1.png" alt="cliq1"/>
+									</a>
+								</div>
+								<div class="item">
+									<a href="img/cliq2.png" class="fancybox-thumbs" data-fancybox-group="cliq">
+										<img class="gallery" src="img/cliq2.png" alt="cliq2"/>
+									</a>
+								</div>
+								<div class="item">
+									<a href="img/cliq3.png" class="fancybox-thumbs" data-fancybox-group="cliq">
+										<img class="gallery" src="img/cliq3.png" alt="cliq3"/>
+									</a>
+								</div>
+								<div class="item">
+									<a href="img/cliq4.png" class="fancybox-thumbs" data-fancybox-group="cliq">
+										<img class="gallery" src="img/cliq4.png" alt="cliq4"/>
+									</a>
+								</div>
+								<div class="item">
+									<a href="img/cliq5.png" class="fancybox-thumbs" data-fancybox-group="cliq">
+										<img class="gallery" src="img/cliq5.png" alt="cliq5"/>
+									</a>
+								</div>
+							</div>
+              <div class="tags-container">
+                <div id="cliq-tags-languages" class="tags">
+                </div>
+                <div id="cliq-tags-fields" class="tags">
+                </div>
+              </div>
+						</div>
+					</div>
+				</li>
+
+
         <li id="castle" class='col-md-6'>
 					<div class="panel">
 						<div class="panel-heading">
