Made youtube videos use iFrames to actually play them properly

--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
 						<div class="panel-body">
 							<div class="owl-carousel-portrait">
 								<div class="item">
-									<a class="fancybox-media" href="https://www.youtube.com/v/AGO83mh7ftI?fs=1&autoplay=1">
+                  <a class="fancybox-media fancybox iframe" data-fancybox-type="iframe" href="https://www.youtube.com/embed/AGO83mh7ftI?fs=1&autoplay=1">
 										<img class="gallery" src="img/calculall-trailer.png" alt="calculall-trailer"/>
 									</a>
 								</div>
@@ -474,7 +474,7 @@
 						<div class="panel-body">
 							<div class="owl-carousel-landscape">
 								<div class="item">
-									<a class="fancybox-media" href="https://www.youtube.com/watch?v=iTVtnZVQQiE">
+									<a class="fancybox-media fancybox iframe" data-fancybox-type="iframe" href="https://www.youtube.com/embed/iTVtnZVQQiE?fs=1&autoplay=1">
 										<img class="gallery" src="img/castle-trailer.png" alt="castle-trailer"/>
 									</a>
 								</div>
@@ -844,7 +844,7 @@
 						<div class="panel-body">
 							<div class="owl-carousel-landscape">
 								<div class="item">
-									<a class="fancybox-media" href='http://www.youtube.com/v/Y7VO62_o-ZI?fs=1&autoplay=1'>
+									<a class="fancybox-media fancybox iframe" data-fancybox-type="iframe" href='http://www.youtube.com/embed/Y7VO62_o-ZI?fs=1&autoplay=1'>
 										<img class="gallery" src="img/survival-trailer.png" alt="blocksurvival"/>
 									</a>
 								</div>
@@ -1099,7 +1099,7 @@
 						<div class="panel-body">
 							<div class="owl-carousel-landscape">
 								<div class="item">
-									<a class="fancybox-media" href="https://www.youtube.com/watch?v=fqiR-saP6Hw&autoplay=1">
+									<a class="fancybox-media fancybox iframe" data-fancybox-type="iframe" href="https://www.youtube.com/embed/fqiR-saP6Hw?fs=1&autoplay=1">
 										<img class="gallery" src="img/troll-trailer.png" alt="troll-trailer"/>
 									</a>
 								</div>
