Changed to iframe mode for fancybox

--- a/index.html
+++ b/index.html
@@ -1289,8 +1289,8 @@
 				'width': 640,
 				'height': 385,
 				'href': this.href.replace(new RegExp("watch\\?v=", "i"), 'v/'),
-				'type': 'swf',
-				'swf': {
+				'type': 'iframe',
+				'iframe': {
 					'wmode': 'transparent',
 					'allowfullscreen': 'true'
 				}
