--- a/client/static/index.html
+++ b/client/static/index.html
@@ -1224,6 +1224,9 @@
 					<div class="form-group col-md-6 col-md-offset-3">
 					  <textarea class="form-control ct-message" rows="6" name="message" id="message" placeholder="Write anything here..." required></textarea>
 					</div>
+					<div class="form-group col-md-6 col-md-offset-3 text-center">
+            <div class="g-recaptcha" data-sitekey="6LeX2CIUAAAAACBdlELOKpWVNXE5ckR15x4v6e00"></div>
+          </div>
 				</div>
 				<div class="row">
 					<div class="form-group col-md-6 col-md-offset-3">
@@ -1236,7 +1239,7 @@
 		<!-- // Contact Form -->
 	</section>
 	<!-- // Contact me -->
-
+  <script src='https://www.google.com/recaptcha/api.js'></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.2/modernizr.js"></script>
   <script src="js/bootstrap.min.js"></script>
